force-app/main/default/objects/Modelo__c/Modelo__c.object-meta.xml
<CustomObject>
    <label>Modelo</label>
    <nameField>
        <label>Modelo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modelos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>