force-app/main/default/objects/Modelo__c/fields/Cilindrada__c.field-meta.xml
<CustomField>
    <fullName>Cilindrada__c</fullName>
    <label>Cilindrada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>