force-app/main/default/objects/Modelo__c/fields/Foto__c.field-meta.xml
<CustomField>
    <fullName>Foto__c</fullName>
    <formula>IMAGE(Imagen__c, &quot;Foto&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foto</label>
    <type>Text</type>
</CustomField>