force-app/main/default/objects/Modelo__c/fields/Frecuencia_Cambio_Aceite__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_Cambio_Aceite__c</fullName>
    <label>Frecuencia Cambio Aceite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>