force-app/main/default/objects/Modelo__c/fields/Frecuencia_Revision__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_Revision__c</fullName>
    <label>Frecuencia Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>