force-app/main/default/objects/Modelo__c/fields/Potencia__c.field-meta.xml
<CustomField>
    <fullName>Potencia__c</fullName>
    <description>cm</description>
    <label>Potencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>